Implements basic configuration using Laravel Mix

--- a/public/index.html
+++ b/public/index.html
@@ -138,7 +138,7 @@
     </header>
     <main class="relative z-10" role="main">
         <section
-            class="relative bg-blue-500 text-white py-20 bg-center bg-cover overflow-hidden md:h-screen md:flex md:items-center"
+            class="relative bg-blue-500 text-white py-20 bg-center bg-cover overflow-hidden md:h-screen md:flex md:items-center md:min-h-600"
             style="background-image: url('https://images.unsplash.com/photo-1557804506-d8017c1e4856?sat=-100&blend-mode=multiply&blend=2c5282');">
             <div class="absolute top-0 left-0 w-full h-full bg-blue-700 opacity-50 z-0"></div>
             <div class="container mx-auto px-8 relative z-10 lg:pt-24">
@@ -177,6 +177,7 @@
         <section class="py-10">
             <div class="container mx-auto px-8">
                 <div class="md:grid md:grid-cols-2 lg:grid-cols-4 md:gap-10">
+                    <div class="spinner"></div>
                     <div class="flex flex-col shadow rounded-md bg-white overflow-hidden mb-10 md:mb-0">
                         <div class="flex-1">
                             <img class="w-full h-auto"
@@ -657,6 +658,8 @@
             </div>
         </div>
     </footer>
+
+    <script type="text/javascript" src="main.js"></script>
 
 </body>
 
