--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>VanHack Platform · Events</title>
+    <link href="favicon.ico" rel="icon" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" href="https://rsms.me/inter/inter.css" />
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/tailwindcss@1.2.0/dist/tailwind.min.css" />
     <link rel="stylesheet" type="text/css" href="style.css" />
