Loads events from source and show them in the content wrapper

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,8 @@
                 </div>
                 <div class="flex-1 md:flex md:items-center">
                     <input type="checkbox" class="sr-only" name="mainMenuToggle" id="mainMenuToggle" />
-                    <ul id="mainMenu" class="-mx-4 text-lg pt-4 md:pt-0 md:text-base md:mx-0 md:flex md:items-center md:flex-1 md:justify-center">
+                    <ul id="mainMenu"
+                        class="-mx-4 text-lg pt-4 md:pt-0 md:text-base md:mx-0 md:flex md:items-center md:flex-1 md:justify-center">
                         <li>
                             <a class="block text-gray-700 py-3 px-4 hover:bg-gray-200 hover:text-blue-500 md:hover:bg-transparent md:px-3 md:py-2"
                                 href="https://vanhack.com/platform/#/jobs">Jobs</a>
@@ -175,9 +176,9 @@
                 </div>
             </div>
         </div>
-        <section class="py-10">
-            <div class="container mx-auto px-8">
-                <div class="md:grid md:grid-cols-2 lg:grid-cols-4 md:gap-10" data-role="events">
+        <section class="py-10 border-b border-gray-200">
+            <div class="container mx-auto px-8 pb-2">
+                <div class="relative md:grid md:grid-cols-2 lg:grid-cols-4 md:gap-10" data-role="events">
                     <!-- generated events goes here -->
                 </div>
             </div>
@@ -349,16 +350,19 @@
             <div class="w-full border-b-2 border-gray-800 py-10">
                 <ul class="flex flex-col items-center text-lg md:flex-row md:justify-center">
                     <li class="mx-2">
-                        <a class="block py-4 md:py-0 hover:text-blue-500" href="https://vanhack.com/platform/#/talent">Talent Pool</a>
+                        <a class="block py-4 md:py-0 hover:text-blue-500"
+                            href="https://vanhack.com/platform/#/talent">Talent Pool</a>
                     </li>
                     <li class="mx-2">
-                        <a class="block py-4 md:py-0 hover:text-blue-500" href="https://vanhack.com/platform/#/talent">Jobs</a>
+                        <a class="block py-4 md:py-0 hover:text-blue-500"
+                            href="https://vanhack.com/platform/#/talent">Jobs</a>
                     </li>
                     <li class="mx-2">
                         <a class="block py-4 md:py-0 hover:text-blue-500" href="https://vanhack.com/covid-19">Leap</a>
                     </li>
                     <li class="mx-2">
-                        <a class="block py-4 md:py-0 hover:text-blue-500" href="https://vanhack.com/platform/#/events">Events</a>
+                        <a class="block py-4 md:py-0 hover:text-blue-500"
+                            href="https://vanhack.com/platform/#/events">Events</a>
                     </li>
                     <li class="mx-2">
                         <a class="block py-4 md:py-0 hover:text-blue-500" href="https://vanhack.com/premium">Premium</a>
@@ -381,7 +385,8 @@
                         </li>
                     </ul>
                 </div>
-                <div class="flex items-center justify-center pt-4 pb-6 order-1 md:order-2 md:pt-0 md:pb-0 md:justify-end">
+                <div
+                    class="flex items-center justify-center pt-4 pb-6 order-1 md:order-2 md:pt-0 md:pb-0 md:justify-end">
                     <a class="block w-6 hover:text-blue-500 ml-4" title="LinkedIn"
                         href="https://www.linkedin.com/company/vanhack/" target="_blank" rel="noopener noreferrer">
                         <svg class="w-full h-auto fill-current" role="img" viewBox="0 0 24 24"
@@ -428,7 +433,9 @@
     </footer>
 
     <template id="spinner">
-        <div class="spinner"></div>
+        <div class="spinner">
+            <div class="spinner-el"></div>
+        </div>
     </template>
 
     <template id="eventBlock">
@@ -437,53 +444,72 @@
                 <img class="w-full h-auto"
                     src="https://images.unsplash.com/photo-1559511260-66a654ae982a?ixlib=rb-1.2.1&auto=format&fit=crop&w=1992&q=100&w=400&h=300" />
             </div>
-            <div class="fle flex-col">
-                <div class="p-4 flex items-center md:border-b md:border-gray-200">
-                    <h3 class="font-bold text-lg flex-1 leading-tight">
+            <div class="flex flex-col flex-1">
+                <div class="px-6 py-4 flex flex-1 items-center border-b border-gray-200">
+                    <h3 class="font-medium text-lg flex-1 leading-tight">
                         <a class="text-gray-900 block" data-render-prop="title"></a>
-                        <span
-                            class="inline-block text-xs rounded-full bg-orange-100 text-orange-700 border border-orange-500 px-2 leading-normal mt-2 font-medium" data-prop="category"></span>
                     </h3>
                     <a class="flex flex-col items-center justify-center leading-none mt-1" href="#">
-                        <span class="block uppercase text-xs tracking-wider text-gray-700" data-prop="start-month"></span>
-                        <span class="block font-bold text-4xl text-gray-900 tracking-tight" data-prop="start-day"></span>
+                        <span class="block uppercase text-xs tracking-wider text-gray-700"
+                            data-prop="start-month"></span>
+                        <span class="block font-bold text-4xl text-gray-900 tracking-tight"
+                            data-prop="start-day"></span>
                     </a>
                 </div>
-                <div class="bg-gray-200 px-4 text-xs py-2 text-gray-700" data-prop="date"></div>
-                <div class="p-4 text-sm md:border-b md:border-gray-200">
-                    <div class="flex items-center pt-1">
+                <div class="px-4 text-xs py-2 bg-gray-200 text-gray-700 hidden" data-prop="date"></div>
+                <div class="p-4 text-sm">
+                    <div class="flex items-center pt-2">
                         <div class="w-4 mr-2">
-                            <svg class="text-blue-500 w-full h-auto stroke-current" viewBox="0 0 24 24" width="24" height="24"
-                                stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round"
+                            <svg class="text-gray-400 w-full h-auto stroke-current" viewBox="0 0 24 24" width="24"
+                                height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round"
+                                stroke-linejoin="round" class="css-i6dzq1">
+                                <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
+                                <circle cx="12" cy="12" r="3"></circle>
+                            </svg>
+                        </div>
+                        <div class="flex-1 flex items-center">
+                            <div class="text-gray-700">Type</div>
+                            <span class="block flex-1 border-t-2 border-gray-300 border-dotted mx-2"></span>
+                            <span
+                                class="inline-block text-xs rounded-full bg-orange-100 text-orange-700 border border-orange-500 px-2 leading-normal font-medium"
+                                data-prop="category"></span>
+                        </div>
+                    </div>
+                    <div class="flex items-center pt-2">
+                        <div class="w-4 mr-2">
+                            <svg class="text-gray-400 w-full h-auto stroke-current" viewBox="0 0 24 24" width="24"
+                                height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round"
                                 stroke-linejoin="round" class="css-i6dzq1">
                                 <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
                                 <circle cx="12" cy="10" r="3"></circle>
                             </svg>
                         </div>
                         <div class="flex-1 flex items-center">
-                            <div class="font-medium">Location</div>
-                            <span class="block flex-1 border-t-2 border-dashed mx-2"></span>
-                            <div class="text-gray-700" data-render-prop="location"></div>
+                            <div class="text-gray-700">Location</div>
+                            <span class="block flex-1 border-t-2 border-gray-300 border-dotted mx-2"></span>
+                            <div class="font-medium" data-render-prop="location"></div>
                         </div>
                     </div>
-                    <div class="flex items-center pt-1">
+                    <div class="flex items-center pt-2">
                         <div class="w-4 mr-2">
-                            <svg class="text-blue-500 w-full h-auto stroke-current" viewBox="0 0 24 24" width="24" height="24"
-                                stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round"
+                            <svg class="text-gray-400 w-full h-auto stroke-current" viewBox="0 0 24 24" width="24"
+                                height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round"
                                 stroke-linejoin="round" class="css-i6dzq1">
                                 <circle cx="12" cy="12" r="10"></circle>
                                 <polyline points="12 6 12 12 16 14"></polyline>
                             </svg>
                         </div>
                         <div class="flex-1 flex items-center">
-                            <div class="flex-auto font-medium">Deadline</div>
-                            <span class="block flex-1 border-t-2 border-dashed mx-2"></span>
-                            <div class="text-gray-700" data-render-prop="deadline"></div>
+                            <div class="flex-auto text-gray-700">Deadline</div>
+                            <span class="block flex-1 border-t-2 border-gray-300 border-dotted mx-2"></span>
+                            <div class="font-medium" data-render-prop="deadline"></div>
                         </div>
                     </div>
                 </div>
-                <div class="px-4 pb-4">
-                    <a class="block px-4 py-2 border-2 border-blue-500 text-center rounded-md mt-4 text-blue-700 font-medium hover:bg-blue-700 hover:text-white hover:border-transparent"
+                <div class="px-4 pb-4 mt-auto">
+                    <a class="block px-4 py-2 border-2 border-gray-300 text-center rounded-md mt-2 text-gray-700 font-medium hover:bg-gray-900 hover:text-white hover:border-transparent"
+                        href="#">View details</a>
+                    <a class="block px-4 py-2 bg-blue-500 text-center rounded-md mt-2 text-blue-100 font-medium hover:bg-blue-700 hover:text-white"
                         href="#">Apply now</a>
                 </div>
             </div>
