--- a/public/index.html
+++ b/public/index.html
@@ -444,8 +444,7 @@
         <div class="flex flex-col shadow rounded-md bg-white overflow-hidden mb-10 md:mb-0" data-render-prop="id"
             data-event-id="">
             <div class="flex-1">
-                <img class="w-full h-auto"
-                    src="https://images.unsplash.com/photo-1559511260-66a654ae982a?ixlib=rb-1.2.1&auto=format&fit=crop&w=1992&q=100&w=400&h=300" />
+                <img class="w-full h-auto" data-render-prop="thumbnail" />
             </div>
             <div class="flex flex-col flex-1">
                 <div class="px-6 py-4 flex flex-1 items-center border-b border-gray-200">
@@ -503,7 +502,7 @@
                             </svg>
                         </div>
                         <div class="flex-1 flex items-center">
-                            <div class="flex-auto text-gray-700">Deadline</div>
+                            <div class="text-gray-700">Deadline</div>
                             <span class="block flex-1 border-t-2 border-gray-300 border-dotted mx-2"></span>
                             <div class="font-medium" data-render-prop="deadline"></div>
                         </div>
@@ -525,11 +524,48 @@
     <template id="eventDetails">
         <div class="event-details w-full flex flex-col max-h-full items-stretch overflow-y-auto">
             <div class="event-details__body flex flex-col items-stretch max-h-full">
-                <div class="px-10 py-4">
-                    <h2 class="text-2xl font-medium" data-render-prop="title"></h2>
-                    <div data-render-prop="date"></div>
+                <div class="px-10 py-4 relative z-20 shadow md:flex md:items-center">
+                    <div class="md:w-1/4">
+                        <img class="w-full h-auto rounded shadow" data-render-prop="thumbnail" />
+                    </div>
+                    <div class="md:w-3/4 md:pl-6">
+                        <h2 class="text-2xl font-medium" data-render-prop="title"></h2>
+                        <div class="text-gray-700 mt-2" data-prop="date"></div>
+                        <div class="pt-2 pb-4">
+                            <div class="flex items-center pt-2">
+                                <div class="w-4 mr-2">
+                                    <svg class="text-gray-400 w-full h-auto stroke-current" viewBox="0 0 24 24" width="24"
+                                        height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round"
+                                        stroke-linejoin="round" class="css-i6dzq1">
+                                        <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
+                                        <circle cx="12" cy="10" r="3"></circle>
+                                    </svg>
+                                </div>
+                                <div class="flex-1 flex items-center">
+                                    <div class="text-gray-700">Location</div>
+                                    <span class="block flex-1 border-t-2 border-gray-300 border-dotted mx-2"></span>
+                                    <div class="font-medium" data-render-prop="location"></div>
+                                </div>
+                            </div>
+                            <div class="flex items-center pt-2">
+                                <div class="w-4 mr-2">
+                                    <svg class="text-gray-400 w-full h-auto stroke-current" viewBox="0 0 24 24" width="24"
+                                        height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round"
+                                        stroke-linejoin="round" class="css-i6dzq1">
+                                        <circle cx="12" cy="12" r="10"></circle>
+                                        <polyline points="12 6 12 12 16 14"></polyline>
+                                    </svg>
+                                </div>
+                                <div class="flex-1 flex items-center">
+                                    <div class="text-gray-700">Deadline</div>
+                                    <span class="block flex-1 border-t-2 border-gray-300 border-dotted mx-2"></span>
+                                    <div class="font-medium" data-render-prop="deadline"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="event-details__description text-base overflow-y-auto flex-1 p-10" data-render-prop="content"></div>
+                <div class="event-details__description text-base overflow-y-auto flex-1 p-10 bg-gray-100 relative z-10" data-render-prop="description"></div>
             </div>
             <div class="event-details__actions border-t border-gray-300 px-10 h-20 flex items-center justify-center">
                 <button class="block py-3 px-10 bg-blue-500 text-blue-100 font-medium rounded hover:bg-blue-700" data-action="apply">Apply now</button>
@@ -542,11 +578,11 @@
             <div class="absolute top-0 bottom-0 z-20 w-full md:w-3/4" role="document">
                 <div class="w-full h-screen bg-white shadow-xl">
                     <button type="button"
-                        class="text-4xl absolute top-0 right-0 mt-2 mr-2 flex items-center justify-center w-10 h-10 rounded-full text-gray-600 hover:bg-gray-100 hover:text-gray-800"
+                        class="text-4xl absolute z-20 top-0 right-0 mt-2 mr-2 flex items-center justify-center w-10 h-10 rounded-full text-gray-600 hover:bg-gray-100 hover:text-gray-800"
                         data-dismiss="modal" aria-label="Close">
                         <span class="block font-thin leading-none pb-1" aria-hidden="true">&times;</span>
                     </button>
-                    <div class="flex h-full" data-role="modal-content"></div>
+                    <div class="flex h-full relative z-10" data-role="modal-content"></div>
                 </div>
             </div>
             <div class="absolute w-full h-full top-0 left-0 bg-gray-900 opacity-75 z-10"></div>
