Allow multiple action handlers

--- a/public/index.html
+++ b/public/index.html
@@ -444,7 +444,9 @@
         <div class="flex flex-col shadow rounded-md bg-white overflow-hidden mb-10 md:mb-0" data-render-prop="id"
             data-event-id="">
             <div class="flex-1">
-                <img class="w-full h-auto" data-render-prop="thumbnail" />
+                <button class="block cursor-pointer" title="View more details" data-action="view">
+                    <img class="block w-full h-auto" data-render-prop="thumbnail" />
+                </button>
             </div>
             <div class="flex flex-col flex-1">
                 <div class="px-6 py-4 flex flex-1 items-center border-b border-gray-200">
