--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     <header class="w-full bg-white lg:bg-transparent lg:absolute lg:left-0 lg:right-0" role="banner">
         <div class="container mx-auto">
             <nav
-                class="px-4 py-6 relative z-40 overflow-hidden md:py-0 md:bg-white md:flex md:items-center md:h-20 md:px-8 lg:rounded-md lg:shadow-lg lg:max-w-screen-lg lg:mx-auto lg:mt-10">
+                class="px-4 py-6 relative z-40 md:bg-white md:flex md:items-center md:py-0 md:h-20 md:px-8 lg:rounded-md lg:shadow-lg lg:max-w-screen-lg lg:mx-auto lg:mt-10">
                 <div class="flex items-center">
                     <a class="flex items-center flex-1" href="https://vanhack.com/" title="VanHack homepage">
                         <strong class="font-bold text-lg text-gray-900">VanHack</strong>
@@ -70,17 +70,17 @@
                             <a class="block text-gray-700 py-3 px-4 hover:bg-gray-200 hover:text-blue-500 md:hover:bg-transparent md:px-3 md:py-2"
                                 href="https://vanhack.com/referral">Referral</a>
                         </li>
-                        <li class="relative">
-                            <a class="hidden cursor-pointer block text-gray-700 py-3 px-4 hover:bg-gray-200 hover:text-blue-500 md:hover:bg-transparent md:px-3 md:py-2 md:block"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">More</a>
-                            <ul
-                                class="md:hidden md:bg-white md:shadow-lg md:absolute md:top-0 md:left-0 md:mt-10 md:py-4 md:rounded">
+                        <li class="relative" data-role="dropdown" aria-haspopup="true">
+                            <a class="hidden cursor-pointer block text-gray-700 py-3 px-4 hover:bg-gray-200 hover:text-blue-500 md:hover:bg-transparent md:px-3 md:py-6 md:block"
+                                data-role="dropdown-toggle" aria-expanded="false">More</a>
+                            <ul class="md:hidden md:bg-white md:shadow md:absolute md:top-0 md:left-0 md:mt-16 md:py-4 md:rounded md:w-48"
+                                data-role="dropdown-menu">
                                 <li>
-                                    <a class="block text-gray-700 py-3 px-4 hover:bg-gray-200 hover:text-blue-500 md:hover:bg-transparent md:px-3 md:py-2"
+                                    <a class="block text-gray-700 leading-tight py-4 px-4 hover:bg-gray-200 hover:text-blue-500 md:hover:bg-gray-200 md:px-6 md:py-2"
                                         href="https://vanhack.com/platform/course">Courses</a>
                                 </li>
                                 <li>
-                                    <a class="block text-gray-700 py-3 px-4 hover:bg-gray-200 hover:text-blue-500 md:hover:bg-transparent md:px-3 md:py-2"
+                                    <a class="block text-gray-700 leading-tight py-4 px-4 hover:bg-gray-200 hover:text-blue-500 md:hover:bg-gray-200 md:px-6 md:py-2"
                                         href="https://vanhack.com/platform/library">Library</a>
                                 </li>
                             </ul>
@@ -100,37 +100,89 @@
                         </div>
                     </label>
                     <div id="userAccountMenu"
-                        class="fixed top-0 right-0 bottom-0 z-50 w-3/4 bg-white flex flex-col shadow-xl md:shadow-none md:block md:relative md:top-auto md:right-0 md:bottom-auto md:z-0 md:w-auto md:bg-transparent">
-                        <div class="flex items-center p-6 border-b border-gray-300 md:border-b-0 md:border-transparent md:p-0 md:justify-end md:cursor-pointer"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        class="fixed top-0 right-0 bottom-0 z-50 w-3/4 bg-white flex flex-col shadow-xl md:shadow-none md:block md:relative md:top-auto md:right-0 md:bottom-auto md:z-0 md:w-auto md:bg-transparent md:py-6"
+                        data-role="dropdown" aria-haspopup="true">
+                        <div class="flex items-center p-6 md:p-0 md:justify-end md:cursor-pointer"
+                            data-role="dropdown-toggle" aria-expanded="false">
                             <img class="block w-6 h-6 rounded-full"
                                 src="https://vanhackblobstorageprod.blob.core.windows.net/img/User/d4cbf7d5-0fbb-434a-895b-83c40c85e113.jpg" />
                             <span class="block ml-2 font-medium md:font-normal">My account</span>
                         </div>
-                        <ul
-                            class="flex flex-col flex-1 md:block md:hidden md:w-48 md:bg-white md:shadow-lg md:absolute md:top-0 md:right-0 md:mt-12 md:py-4 md:rounded">
+                        <ul class="flex flex-col flex-1 md:block md:hidden md:w-56 md:bg-white md:shadow md:absolute md:top-0 md:right-0 md:mt-16 md:py-4 md:rounded"
+                            data-role="dropdown-menu">
                             <li>
-                                <a class="block px-6 py-4 leading-tight text-gray-700 hover:bg-gray-100 hover:text-blue-500 md:py-2"
-                                    href="#">Profile</a>
+                                <a class="flex items-center px-6 py-4 leading-tight text-gray-700 hover:bg-gray-200 hover:text-blue-500 md:py-2"
+                                    href="#">
+                                    <svg class="mr-3 text-gray-500 stroke-current" viewBox="0 0 24 24" width="16" height="16"
+                                        stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round"
+                                        stroke-linejoin="round">
+                                        <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
+                                        <circle cx="12" cy="7" r="4"></circle>
+                                    </svg>
+                                    Profile
+                                </a>
                             </li>
                             <li>
-                                <a class="block px-6 py-4 leading-tight text-gray-700 hover:bg-gray-100 hover:text-blue-500 md:py-2"
-                                    href="#">Referral</a>
+                                <a class="flex items-center px-6 py-4 leading-tight text-gray-700 hover:bg-gray-200 hover:text-blue-500 md:py-2"
+                                    href="#">
+                                    <svg class="mr-3 text-gray-500 stroke-current" viewBox="0 0 24 24" width="16" height="16"
+                                        stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round"
+                                        stroke-linejoin="round">
+                                        <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
+                                        <circle cx="9" cy="7" r="4"></circle>
+                                        <path d="M23 21v-2a4 4 0 0 0-3-3.87"></path>
+                                        <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
+                                    </svg>
+                                    Referral
+                                </a>
                             </li>
                             <li>
-                                <a class="block px-6 py-4 leading-tight text-gray-700 hover:bg-gray-100 hover:text-blue-500 md:py-2"
-                                    href="#">English verification</a>
+                                <a class="flex items-center px-6 py-4 leading-tight text-gray-700 hover:bg-gray-200 hover:text-blue-500 md:py-2"
+                                    href="#">
+                                    <svg class="mr-3 text-gray-500 stroke-current" viewBox="0 0 24 24" width="16" height="16"
+                                        stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round"
+                                        stroke-linejoin="round">
+                                        <path d="M3 18v-6a9 9 0 0 1 18 0v6"></path>
+                                        <path
+                                            d="M21 19a2 2 0 0 1-2 2h-1a2 2 0 0 1-2-2v-3a2 2 0 0 1 2-2h3zM3 19a2 2 0 0 0 2 2h1a2 2 0 0 0 2-2v-3a2 2 0 0 0-2-2H3z">
+                                        </path>u
+                                    </svg>
+                                    English verification
+                                </a>
                             </li>
                             <li>
-                                <a class="block px-6 py-4 leading-tight text-gray-700 hover:bg-gray-100 hover:text-blue-500 md:py-2"
-                                    href="#">Code verification</a>
+                                <a class="flex items-center px-6 py-4 leading-tight text-gray-700 hover:bg-gray-200 hover:text-blue-500 md:py-2"
+                                    href="#">
+                                    <svg class="mr-3 text-gray-500 stroke-current" viewBox="0 0 24 24" width="16" height="16"
+                                        stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round"
+                                        stroke-linejoin="round">
+                                        <polyline points="16 18 22 12 16 6"></polyline>
+                                        <polyline points="8 6 2 12 8 18"></polyline>
+                                    </svg>
+                                    Code verification
+                                </a>
                             </li>
                             <li>
-                                <a class="block px-6 py-4 leading-tight text-gray-700 hover:bg-gray-100 hover:text-blue-500 md:py-2"
-                                    href="#">Account settings</a>
+                                <a class="flex items-center px-6 py-4 leading-tight text-gray-700 hover:bg-gray-200 hover:text-blue-500 md:py-2"
+                                    href="#">
+                                    <svg class="mr-3 text-gray-500 stroke-current" viewBox="0 0 24 24" width="16" height="16"
+                                        stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round"
+                                        stroke-linejoin="round">
+                                        <line x1="4" y1="21" x2="4" y2="14"></line>
+                                        <line x1="4" y1="10" x2="4" y2="3"></line>
+                                        <line x1="12" y1="21" x2="12" y2="12"></line>
+                                        <line x1="12" y1="8" x2="12" y2="3"></line>
+                                        <line x1="20" y1="21" x2="20" y2="16"></line>
+                                        <line x1="20" y1="12" x2="20" y2="3"></line>
+                                        <line x1="1" y1="14" x2="7" y2="14"></line>
+                                        <line x1="9" y1="8" x2="15" y2="8"></line>
+                                        <line x1="17" y1="16" x2="23" y2="16"></line>
+                                    </svg>
+                                    Account settings
+                                </a>
                             </li>
-                            <li class="flex-1 flex justify-end flex-col p-4 md:block md:p-0">
-                                <a class="text-center block px-6 py-4 leading-tight border-2 border-blue-500 text-blue-700 font-medium rounded-md hover:bg-blue-500 hover:text-blue-100 md:rounded-none md:border-0 md:text-gray-700 md:font-normal md:hover:bg-gray-100 md:hover:text-blue-500 md:text-left md:py-2"
+                            <li class="flex-1 flex justify-end flex-col p-4 md:block md:pb-0">
+                                <a class="text-center block px-6 py-4 leading-tight border-2 border-blue-500 text-blue-600 font-medium rounded-md hover:bg-blue-500 hover:text-blue-100 md:rounded md:py-2"
                                     href="#">Become premium</a>
                             </li>
                         </ul>
@@ -466,7 +518,7 @@
                         <div class="w-4 mr-2">
                             <svg class="text-gray-400 w-full h-auto stroke-current" viewBox="0 0 24 24" width="24"
                                 height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round"
-                                stroke-linejoin="round" class="css-i6dzq1">
+                                stroke-linejoin="round">
                                 <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
                                 <circle cx="12" cy="12" r="3"></circle>
                             </svg>
@@ -483,7 +535,7 @@
                         <div class="w-4 mr-2">
                             <svg class="text-gray-400 w-full h-auto stroke-current" viewBox="0 0 24 24" width="24"
                                 height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round"
-                                stroke-linejoin="round" class="css-i6dzq1">
+                                stroke-linejoin="round">
                                 <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
                                 <circle cx="12" cy="10" r="3"></circle>
                             </svg>
@@ -498,7 +550,7 @@
                         <div class="w-4 mr-2">
                             <svg class="text-gray-400 w-full h-auto stroke-current" viewBox="0 0 24 24" width="24"
                                 height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round"
-                                stroke-linejoin="round" class="css-i6dzq1">
+                                stroke-linejoin="round">
                                 <circle cx="12" cy="12" r="10"></circle>
                                 <polyline points="12 6 12 12 16 14"></polyline>
                             </svg>
@@ -536,9 +588,9 @@
                         <div class="pt-2 pb-4">
                             <div class="flex items-center pt-2">
                                 <div class="w-4 mr-2">
-                                    <svg class="text-gray-400 w-full h-auto stroke-current" viewBox="0 0 24 24" width="24"
-                                        height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round"
-                                        stroke-linejoin="round" class="css-i6dzq1">
+                                    <svg class="text-gray-400 w-full h-auto stroke-current" viewBox="0 0 24 24"
+                                        width="24" height="24" stroke="currentColor" stroke-width="2" fill="none"
+                                        stroke-linecap="round" stroke-linejoin="round">
                                         <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
                                         <circle cx="12" cy="10" r="3"></circle>
                                     </svg>
@@ -551,9 +603,9 @@
                             </div>
                             <div class="flex items-center pt-2">
                                 <div class="w-4 mr-2">
-                                    <svg class="text-gray-400 w-full h-auto stroke-current" viewBox="0 0 24 24" width="24"
-                                        height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round"
-                                        stroke-linejoin="round" class="css-i6dzq1">
+                                    <svg class="text-gray-400 w-full h-auto stroke-current" viewBox="0 0 24 24"
+                                        width="24" height="24" stroke="currentColor" stroke-width="2" fill="none"
+                                        stroke-linecap="round" stroke-linejoin="round">
                                         <circle cx="12" cy="12" r="10"></circle>
                                         <polyline points="12 6 12 12 16 14"></polyline>
                                     </svg>
@@ -567,16 +619,19 @@
                         </div>
                     </div>
                 </div>
-                <div class="event-details__description text-base overflow-y-auto flex-1 p-10 bg-gray-100 relative z-10" data-render-prop="description"></div>
+                <div class="event-details__description text-base overflow-y-auto flex-1 p-10 bg-gray-100 relative z-10"
+                    data-render-prop="description"></div>
             </div>
             <div class="event-details__actions border-t border-gray-300 px-10 h-20 flex items-center justify-center">
-                <button class="block py-3 px-10 bg-blue-500 text-blue-100 font-medium rounded hover:bg-blue-700" data-action="apply">Apply now</button>
+                <button class="block py-3 px-10 bg-blue-500 text-blue-100 font-medium rounded hover:bg-blue-700"
+                    data-action="apply">Apply now</button>
             </div>
         </div>
     </template>
 
     <template id="modal">
-        <div class="hidden fixed z-50 w-full h-full flex flex-col items-center justify-center top-0 left-0" tabindex="-1" role="dialog">
+        <div class="hidden fixed z-50 w-full h-full flex flex-col items-center justify-center top-0 left-0"
+            tabindex="-1" role="dialog">
             <div class="absolute top-0 bottom-0 z-20 w-full md:w-3/4" role="document">
                 <div class="w-full h-screen bg-white shadow-xl">
                     <button type="button"
