--- a/public/index.html
+++ b/public/index.html
@@ -218,6 +218,15 @@
         </div>
         <section class="py-10 border-b border-gray-200">
             <div class="container mx-auto px-8 pb-2">
+                <h2 class="text-2xl font-medium mb-8">Leaps, Missions and VanHackthon</h2>
+                <div class="relative md:grid md:grid-cols-2 lg:grid-cols-4 md:gap-10" data-role="events-highlight">
+                    <!-- generated events goes here -->
+                </div>
+            </div>
+        </section>
+        <section class="py-10 border-b border-gray-200">
+            <div class="container mx-auto px-8 pb-2">
+                <h2 class="text-2xl font-medium mb-8">Other activities</h2>
                 <div class="relative md:grid md:grid-cols-2 lg:grid-cols-4 md:gap-10" data-role="events">
                     <!-- generated events goes here -->
                 </div>
