Makes premium webinars visually stand out

--- a/public/index.html
+++ b/public/index.html
@@ -565,8 +565,15 @@
                         class="block w-full px-4 py-2 bg-blue-500 text-center rounded mt-2 text-blue-100 font-medium hover:bg-blue-700 hover:text-blue-100"
                         data-action="apply" data-premium="false">Apply now</button>
                     <button
-                        class="hidden block w-full px-4 py-2 bg-gray-900 text-center rounded mt-2 text-green-100 font-medium hover:bg-gray-700 hover:text-gray-100"
-                        data-action="apply" data-premium="true">Upgrade your account</button>
+                        class="hidden inline-flex items-center justify-center w-full px-4 py-2 bg-gray-900 text-center rounded mt-2 text-green-100 font-medium hover:bg-gray-700 hover:text-gray-100"
+                        data-action="apply" data-premium="true">
+                        <svg class="mr-2 stroke-current text-yellow-500" viewBox="0 0 24 24" width="16" height="16"
+                            stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round"
+                            stroke-linejoin="round">
+                            <polygon points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"></polygon>
+                        </svg>
+                        Become premium
+                    </button>
                 </div>
             </div>
         </div>
@@ -625,8 +632,15 @@
                                 class="px-6 py-3 bg-blue-500 text-center rounded mt-2 text-blue-100 font-medium hover:bg-blue-700 hover:text-blue-100"
                                 data-action="apply" data-premium="false">Apply now</button>
                             <button
-                                class="hidden px-6 py-3 bg-gray-900 text-center rounded mt-2 text-green-100 font-medium hover:bg-gray-700 hover:text-gray-100"
-                                data-action="apply" data-premium="true">Upgrade your account</button>
+                                class="hidden inline-flex items-center justify-center px-6 py-3 bg-gray-900 text-center rounded mt-2 text-green-100 font-medium hover:bg-gray-700 hover:text-gray-100"
+                                data-action="apply" data-premium="true">
+                                <svg class="mr-2 stroke-current text-yellow-500" viewBox="0 0 24 24" width="16"
+                                    height="16" stroke="currentColor" stroke-width="2" fill="none"
+                                    stroke-linecap="round" stroke-linejoin="round">
+                                    <polygon points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"></polygon>
+                                </svg>
+                                Become premium
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -639,8 +653,14 @@
                     class="px-6 py-3 bg-blue-500 text-center rounded mt-2 text-blue-100 font-medium hover:bg-blue-700 hover:text-blue-100"
                     data-action="apply" data-premium="false">Apply now</button>
                 <button
-                    class="hidden px-6 py-3 bg-gray-900 text-center rounded mt-2 text-green-100 font-medium hover:bg-gray-700 hover:text-gray-100"
-                    data-action="apply" data-premium="true">Upgrade your account</button>
+                    class="hidden inline-flex items-center justify-center px-6 py-3 bg-gray-900 text-center rounded mt-2 text-green-100 font-medium hover:bg-gray-700 hover:text-gray-100"
+                    data-action="apply" data-premium="true">
+                    <svg class="mr-2 stroke-current text-yellow-500" viewBox="0 0 24 24" width="16" height="16" stroke="currentColor" stroke-width="2"
+                            fill="none" stroke-linecap="round" stroke-linejoin="round">
+                            <polygon points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"></polygon>
+                        </svg>
+                    Become premium
+                </button>
             </div>
         </div>
     </template>
