Implements the event sharing option

--- a/public/index.html
+++ b/public/index.html
@@ -626,13 +626,21 @@
                                     <div class="font-medium" data-render-prop="deadline"></div>
                                 </div>
                             </div>
+                            <div class="py-4" data-render-prop="social">
+                                <a class="md:text-xs inline-flex px-4 py-2 md:px-3 md:py-1 leading-none text-gray-600 border border-gray-500 rounded-full my-2 md:my-0 mr-1 hover:bg-blue-500 hover:text-blue-100 hover:border-transparent" data-share="linkedin" target="_blank" rel="noopener noreferrer">Share
+                                    on LinkedIn</a>
+                                <a class="md:text-xs inline-flex px-4 py-2 md:px-3 md:py-1 leading-none text-gray-600 border border-gray-500 rounded-full my-2 md:my-0 mr-1 hover:bg-blue-500 hover:text-blue-100 hover:border-transparent" data-share="facebook" target="_blank" rel="noopener noreferrer">Share
+                                    on Facebook</a>
+                                <a class="md:text-xs inline-flex px-4 py-2 md:px-3 md:py-1 leading-none text-gray-600 border border-gray-500 rounded-full my-2 md:my-0 mr-1 hover:bg-blue-500 hover:text-blue-100 hover:border-transparent" data-share="twitter" target="_blank" rel="noopener noreferrer">Share
+                                    on Twitter</a>
+                            </div>
                         </div>
                         <div class="py-3 md:hidden">
                             <button
-                                class="px-6 py-3 bg-blue-500 text-center rounded mt-2 text-blue-100 font-medium hover:bg-blue-700 hover:text-blue-100"
+                                class="px-6 py-3 w-full bg-blue-500 text-center rounded mt-2 text-blue-100 font-medium hover:bg-blue-700 hover:text-blue-100"
                                 data-action="apply" data-premium="false">Apply now</button>
                             <button
-                                class="hidden inline-flex items-center justify-center px-6 py-3 bg-gray-900 text-center rounded mt-2 text-green-100 font-medium hover:bg-gray-700 hover:text-gray-100"
+                                class="hidden flex w-full items-center justify-center px-6 py-3 bg-gray-900 text-center rounded mt-2 text-green-100 font-medium hover:bg-gray-700 hover:text-gray-100"
                                 data-action="apply" data-premium="true">
                                 <svg class="mr-2 stroke-current text-yellow-500" viewBox="0 0 24 24" width="16"
                                     height="16" stroke="currentColor" stroke-width="2" fill="none"
@@ -650,15 +658,16 @@
             <div
                 class="event-details__actions border-t border-gray-300 px-10 py-6 flex items-center justify-center md:py-0">
                 <button
-                    class="px-6 py-3 bg-blue-500 text-center rounded mt-2 text-blue-100 font-medium hover:bg-blue-700 hover:text-blue-100"
+                    class="px-6 py-3 bg-blue-500 text-center w-full md:w-auto rounded mt-2 text-blue-100 font-medium hover:bg-blue-700 hover:text-blue-100"
                     data-action="apply" data-premium="false">Apply now</button>
                 <button
-                    class="hidden inline-flex items-center justify-center px-6 py-3 bg-gray-900 text-center rounded mt-2 text-green-100 font-medium hover:bg-gray-700 hover:text-gray-100"
+                    class="hidden inline-flex w-full md:w-auto items-center justify-center px-6 py-3 bg-gray-900 text-center rounded mt-2 text-green-100 font-medium hover:bg-gray-700 hover:text-gray-100"
                     data-action="apply" data-premium="true">
-                    <svg class="mr-2 stroke-current text-yellow-500" viewBox="0 0 24 24" width="16" height="16" stroke="currentColor" stroke-width="2"
-                            fill="none" stroke-linecap="round" stroke-linejoin="round">
-                            <polygon points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"></polygon>
-                        </svg>
+                    <svg class="mr-2 stroke-current text-yellow-500" viewBox="0 0 24 24" width="16" height="16"
+                        stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round"
+                        stroke-linejoin="round">
+                        <polygon points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"></polygon>
+                    </svg>
                     Become premium
                 </button>
             </div>
