--- a/public/index.html
+++ b/public/index.html
@@ -211,7 +211,7 @@
                 </div>
             </div>
         </section>
-        <div class="border-b bg-white">
+        <div id="events" class="border-b bg-white">
             <div class="container mx-auto px-8">
                 <div class="py-6 flex flex-wrap justify-center md:items-center" data-role="event-types"></div>
             </div>
