Implements empty state when events not found

--- a/public/index.html
+++ b/public/index.html
@@ -1106,6 +1106,14 @@
         </div>
     </template>
 
+    <template id="eventsEmptyState">
+        <div class="w-full my-2" data-role="empty-state">
+            <div class="bg-white shadow py-4 px-6 text-lg text-yellow-700 rounded" role="alert">
+                No events were found
+            </div>
+        </div>
+    </template>
+
     <script type="text/javascript" src="main.js"></script>
 
 </body>
